Module 8 assignment completed
States drawn and projected. Website moved into bootstrap for responsive
design

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,22 @@
       "name": "d3-coordinated-viz",
       "path": "",
       "files": {
+        "32794028": {
+          "id": "32794028",
+          "path": "lib/bootstrap/bootstrap.min.js",
+          "output": "lib/bootstrap/bootstrap.min-dist.js",
+          "name": "bootstrap.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -177,6 +193,81 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "62195e19": {
+          "id": "62195e19",
+          "path": "css/bootstrap.css",
+          "output": "css/bootstrap-dist.css",
+          "name": "bootstrap.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "16a1d59a": {
+          "id": "16a1d59a",
+          "path": "css/one-page-wonder.css",
+          "output": "css/one-page-wonder-dist.css",
+          "name": "one-page-wonder.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "d9829dff": {
+          "id": "d9829dff",
+          "path": "lib/bootstrap/bootstrap.js",
+          "output": "lib/bootstrap/bootstrap-dist.js",
+          "name": "bootstrap.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "6c1a87ac": {
+          "id": "6c1a87ac",
+          "path": "lib/bootstrap/jquery.js",
+          "output": "lib/bootstrap/jquery-dist.js",
+          "name": "jquery.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "77a062aa": {
+          "id": "77a062aa",
+          "path": "bootstrapIndex.html",
+          "output": "bootstrapIndex.html",
+          "name": "bootstrapIndex.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
