Work on module 10
Option selector created

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -284,6 +284,19 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "52b4db82": {
+          "id": "52b4db82",
+          "path": "data/background.png",
+          "output": "data/background.png",
+          "name": "background.png",
+          "category": "IMAGE",
+          "size": 2390967,
+          "type": "png",
+          "initialSize": 2390967,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
